# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20240821001902_create_subscriptions_table.sql
scripts/: init_db.sh  init_db_win.ps1
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
